failure section added

--- a/index.html
+++ b/index.html
@@ -16,12 +16,28 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <h1 class="header-title">All Thinks Are Possible If You believe</h1>
+            <h2 class="header-title">All Thinks Are <br> Possible If You <br> believe</h2>
             <p class="header-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
             <button class="btn-primary">Contact Us</button>
         </div>
     </header>
     <main>
+        <section class="profile">
+            <div class="failure-image"></div>
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="failures">
+                <h3 class="profile-title">My failures of <br> previous year</h3>
+            <p class="profile-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul class="failure-list">
+                <li>imContrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular , is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ul>
+            </div>
+        </section>
 
     </main>
     <footer>
